# Efficient_UOT

./: README.md
scripts/: MAP-UOT_CPU.sh  MAP-UOT_GPU.sh  README.md  Typical-UOT_CPU.sh  Typical-UOT_GPU.sh
src/: CMakeLists.txt  MAP-UOT_CPU.cpp  MAP-UOT_CPU.h  MAP-UOT_GPU.cu  MAP-UOT_GPU.h  MAP-UOT_MPI.cpp  MAP-UOT_MPI.h  MAP-UOT_TestGPUMap.cu  MAP-UOT_TestGPUMap.h  MAP-UOT_TestMPIMap.cpp  MAP-UOT_TestMPIMap.h  MAP-UOT_TestMPItypical.cpp  MAP-UOT_TestMPItypical.h  MAP-UOT_TestMap.cpp  MAP-UOT_TestMap.h  MAP-UOT_Testprint_0.cpp  MAP-UOT_Testprint_0.h  MAP-UOT_Testprint_1.cpp  MAP-UOT_Testprint_1.h  MAP-UOT_Testtypical_0.cpp  MAP-UOT_Testtypical_0.h  MAP-UOT_Testtypical_1.cpp  MAP-UOT_Testtypical_1.h  MAP-UOT_computeerror.hpp  MAP-UOT_parameter.h  README.md  SH_UOT_CPU_new_cache.sh  SH_UOT_CPU_new_performance.sh  SH_UOT_CPU_new_pthreads.sh  SH_UOT_CPU_old_cache.sh  SH_UOT_CPU_old_performance.sh  SH_UOT_CPU_scalable.sh  SH_UOT_GPU_new_performance.sh  SH_UOT_GPU_old_performance.sh  Typical-UOT_CPU.py  Typical-UOT_GPU.py  UOT_CPU_new_pthreads.cpp  UOT_CPU_old.py  UOT_CPU_typical.cpp  UOT_GPU_0.cu  (+2 more)
